--- a/azuki-web/.project
+++ b/azuki-web/.project
@@ -18,7 +18,7 @@
 		<link>
 			<name>azuki-base</name>
 			<type>2</type>
-			<location>/Users/Kawakicchi/git/azuki-framework/azuki-base/main/src</location>
+			<location>C:/Users/kawakita/git/azuki-framework/azuki-base/main/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
