--- a/azuki-base/build.properties
+++ b/azuki-base/build.properties
@@ -1,3 +1,11 @@
+################################################################################
+# Azuki Base Library build property file
+# 
+#   Version : 1.0.0 2013/06/25
+#   Author  : Kawakicchi
+#
+################################################################################
 
+# Product information
 product.name=azuki-base
 product.version=1.0.0
