--- a/azuki-web/template/WEB-INF/web.xml
+++ b/azuki-web/template/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
 
-	<display-name></display-name>
+	<display-name>@WebApp.name@</display-name>
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
