--- a/azuki-analyzer/.project
+++ b/azuki-analyzer/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>azuki-base</name>
+			<type>2</type>
+			<location>C:/Users/kawakita/git/azuki-framework/azuki-base/main/src</location>
+		</link>
+	</linkedResources>
 </projectDescription>
